--- a/src/index.css
+++ b/src/index.css
@@ -223,8 +223,6 @@
   flex: 1;
 }
 
- 
-
 .footer {
   background-color: #363636;
   color: #fff;
@@ -238,7 +236,7 @@
   justify-content: center; /* Center horizontally */
   align-items: flex-start; /* Top align all columns */
   flex-wrap: wrap; /* Allow wrapping for smaller screens */
-  gap: 80px; /* Flexible spacing between columns */
+  gap: 40px; /* Flexible spacing between columns */
 }
 
 /* Footer column styling */
@@ -310,15 +308,16 @@
 /* Footer Bottom Styling */
 .footer2-bottom {
   background: linear-gradient(120deg, 
-  rgb(59, 48, 10) 0%,   /* Darker gold */
-  rgb(191, 149, 10) 50%,  /* Mid-tone gold */
-  rgb(59, 48, 10) 100%   /* Darker gold */);
- height: 40px; }
+    rgb(59, 48, 10) 0%,   /* Darker gold */
+    rgb(191, 149, 10) 50%,  /* Mid-tone gold */
+    rgb(59, 48, 10) 100%   /* Darker gold */);
+  height: 40px;
+}
 
 .footer-bottom {
   background-color: #222;
   padding: 15px 0;
- }
+}
 
 .footer-bottom p {
   margin: 0;
@@ -329,7 +328,7 @@
 @media (max-width: 768px) {
   .footer-row {
     flex-direction: column; /* Stack columns vertically */
-    gap: 0px; /* Remove gap between sections and columns */
+    gap: 20px; /* Adjust gap between sections */
     justify-content: center; /* Center all sections horizontally on mobile */
     align-items: center; /* Center all sections horizontally */
   }
@@ -343,8 +342,6 @@
     margin-bottom: 8px; /* Reduce margin between list items */
   }
 
-  
-
   .footer h3 {
     font-size: 18px; /* Reduce font size for headings */
     margin-bottom: 15px;
@@ -354,7 +351,10 @@
     font-size: 12px; /* Adjust font size for smaller devices */
   }
 
- 
+   .contact-info {
+    gap: 60px; /* No gap between contact items on very small screens */
+    text-align: center; /* Ensure the "Contact Us" section is centered on very small screens */
+  }
 }
 
 @media (max-width: 480px) {
@@ -376,9 +376,8 @@
   .footer p, .footer-links li {
     font-size: 11px; /* Smaller font size for very small screens */
   }
-
-  
 }
+
 
 
 /* Sections */
